argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  argocd
  labels:
    istio-injection: enabled
