argocd/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-virtual-svc
  namespace: argocd
spec:
  hosts:
    - argocd.local
  gateways:
    - ingressgateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: argocd-server
        port:
          number: 443
---
